--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@testing-library/user-event": "^12.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "draft-js": "^0.11.7",
     "react": "^18.0.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.0.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-icons": "^4.9.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.1",
     "react-scripts": "^5.0.1",
